<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.t_yokoi.cognitivelaundry.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/max"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/number_of_clothes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:text="@string/default_number"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/bath_time"
            android:textSize="16sp" />

        <Button
            android:id="@+id/bath_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/input_time"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/place"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:text="@string/default_place"
            android:textSize="16sp" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/save"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <!--<TextView-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_weight="1"-->
        <!--android:background="@drawable/weather_box"-->
        <!--android:text="@string/weather"-->
        <!--android:textSize="20sp" />-->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/day_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/weather_box"
                android:gravity="center_horizontal"
                android:text="@string/date"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/weather_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"

                android:src="@mipmap/sun" />

            <TextView
                android:id="@+id/wash_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/best_day"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/left_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/default_number"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/day_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/weather_box"
                android:gravity="center_horizontal"
                android:text="@string/date"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/weather_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@mipmap/sun" />

            <TextView
                android:id="@+id/wash_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/best_day"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/left_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/default_number"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/day_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/weather_box"
                android:gravity="center_horizontal"
                android:text="@string/date"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/weather_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@mipmap/sun" />

            <TextView
                android:id="@+id/wash_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/best_day"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/left_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/default_number"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/day_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/weather_box"
                android:gravity="center_horizontal"
                android:text="@string/date"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/weather_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@mipmap/sun" />

            <TextView
                android:id="@+id/wash_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/best_day"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/left_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/default_number"
                android:textSize="16sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/day_5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/weather_box"
                android:gravity="center_horizontal"
                android:text="@string/date"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/weather_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@mipmap/sun" />

            <TextView
                android:id="@+id/wash_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/best_day"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/left_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/default_number"
                android:textSize="16sp" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/weather_box"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/left"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/left_clothes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:text="@string/default_number"
                android:textSize="50sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/unit"
                android:textSize="20sp" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/laundry"
            android:textSize="30sp" />
    </LinearLayout>


</LinearLayout>


